# chimahon

./: .gitignore  .gitmodules  CHANGELOG.md  PLANS.md
app/src/main/: AndroidManifest.xml
app/src/main/java/eu/kanade/tachiyomi/data/audio/: OverlayAudioModelManager.kt
app/src/main/java/eu/kanade/tachiyomi/di/: AppModule.kt
app/src/main/java/eu/kanade/tachiyomi/ui/dictionary/: DictionaryEntryWebView.kt  DictionaryPreferences.kt  DictionaryTab.kt  OverlayAudioCaptureEligibility.kt  PlaybackAudioCapture.kt  ScreenLookupOverlayController.kt  ScreenLookupPermissionActivity.kt  (+1 more)
app/src/main/java/eu/kanade/tachiyomi/widget/: ViewPagerAdapter.kt
chimahon/: build.gradle.kts
chimahon/src/main/assets/dictionary/: base.css  renderer.js
chimahon/src/main/assets/novel/: reader.js
chimahon/src/main/cpp/: CMakeLists.txt  sentence_audio_jni.cpp
chimahon/src/main/java/chimahon/: DictionaryRepository.kt
chimahon/src/main/java/chimahon/anki/: AnkiCardCreator.kt  AnkiProfile.kt
chimahon/src/main/java/chimahon/audio/: BufferedSentenceAudioProvider.kt  NativeSentenceAudioBackend.kt  SentenceAudio.kt  SentenceAudioInference.kt  TimestampedPcmRingBuffer.kt
chimahon/src/main/java/chimahon/dictionary/ko/: KoreanDeinflector.kt
chimahon/src/main/java/com/canopus/chimareader/data/: NovelReaderSettings.kt
chimahon/src/test/java/chimahon/anki/: AnkiCardCreatorTest.kt
chimahon/src/test/java/chimahon/audio/: BufferedSentenceAudioProviderTest.kt  SentenceAudioInferenceTest.kt  TimestampedPcmRingBufferTest.kt
i18n/src/commonMain/moko-resources/base/: strings.xml
(+22 files in other folders)
